# My_IP

./: .gitignore  README.md  get_ip.py  main.py  pyproject.toml  requirements.txt
src/: get_ip.py  main.py
